# intent-hub

./: .dockerignore  .env.china  .env.official  .gitignore  README.md  README.zh-CN.md  docker-compose.yml  env.example
docs/: 诊断治疗功能.md
exp/: env.bash  env_report.txt
exp/baseline/LLM/: llm.py  test_report_20260120-142145.txt  test_report_20260120-143239.txt  test_report_20260120-215422.txt  test_report_20260121-214744.txt  test_report_20260123-162726.txt  test_report_20260123-163240.txt  test_report_20260128-142839.txt  test_report_20260128-143232.txt  test_report_20260128-155202.txt  (+13 more)
exp/data/: generate_ecommerce_dataset.py  process_data.py  process_ecommerce_conflict.py
exp/main/: main.py
intent-hub-backend/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py
intent-hub-backend/docs/: API.md  STRUCTURE.md
intent-hub-backend/intent_hub/: __init__.py  app.py  auth.py  config.py  diagnostics_cache.json  encoder.py  models.py  qdrant_wrapper.py  route_manager.py  settings.example.json
intent-hub-backend/intent_hub/api/: __init__.py  auth.py  diagnostics.py  health.py  prediction.py  reindex.py  routes.py  settings.py
intent-hub-backend/intent_hub/core/: __init__.py  components.py
intent-hub-backend/intent_hub/services/: __init__.py  diagnostic_service.py  llm_factory.py  prediction_service.py  route_service.py  sync_service.py
intent-hub-backend/intent_hub/utils/: __init__.py  error_handler.py  logger.py
intent-hub-backend/tests/: test_config.py
intent-hub-frontend/: .env.production  Dockerfile  dist.tar  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
intent-hub-frontend/src/: App.vue  main.ts  style.css
(+165 files in other folders)
