[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-hub"
version = "0.1.0"
description = "基于向量相似度的静态路由系统"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Intent Hub Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# 核心依赖 (轻量级，使用远程 HuggingFace API)
dependencies = [
    "flask>=2.3.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.20.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
]

[project.optional-dependencies]
# 本地模型支持 (会显著增加安装体积)
local = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentencepiece>=0.1.99",
]
# Gemini LLM 支持
gemini = [
    "langchain-google-genai>=0.0.6",
]
# 开发依赖
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
# 完整安装 (包含所有可选依赖)
full = [
    "intent-hub[local,gemini]",
]

[tool.setuptools]
packages = ["intent_hub"]

[tool.setuptools.package-data]
intent_hub = ["routes_config.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
